--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.firebaseexample">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".BaseApplication"
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Firebaseexample"
         tools:targetApi="31">
+        <activity
+            android:name=".sign.view.SignUpActivity"
+            android:exported="false" />
         <activity
             android:name=".sign.view.SignInActivity"
             android:exported="true">
