--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
 
     implementation 'com.google.dagger:hilt-android:2.42'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
     kapt 'com.google.dagger:hilt-android-compiler:2.42'
 
     testImplementation 'junit:junit:4.13.2'
